bk_ida/gccida/g3/parse_number
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:984:21: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  parse_number( cpp_reader_0 *pfile, cpp_string_0 *number, cppchar_t c, int leading_period) 
                    ^~~~~~~~~~~~
                    cpp_reader
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:984:42: error: unknown type name 'cpp_string_0'; did you mean 'cpp_string'?
void  parse_number( cpp_reader_0 *pfile, cpp_string_0 *number, cppchar_t c, int leading_period) 
                                         ^~~~~~~~~~~~
                                         cpp_string
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplib.h:41:27: note: 'cpp_string' declared here
typedef struct cpp_string cpp_string;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:987:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *u_buff; // rcx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:988:1: error: unknown type name 'cpp_buffer_0'; did you mean 'cpp_buffer'?
cpp_buffer_0 *buffer; // r14 
^~~~~~~~~~~~
cpp_buffer
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplib.h:38:27: note: 'cpp_buffer' declared here
typedef struct cpp_buffer cpp_buffer;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:993:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v13; // r13 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:994:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v14; // rbx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:995:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_next; // rsi 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1005:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v25; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1007:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *free_buffs; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1008:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_free_buffs; // rsi 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1010:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v30; // rbx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1012:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v32; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1013:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v33; // [rsp+0h] [rbp-48h] 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1014:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *v34; // [rsp+0h] [rbp-48h] 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1049:22: error: expected expression
v32 = ( _cpp_buff_0 *)xmalloc( 0x1F60uLL); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1049:9: error: use of undeclared identifier '_cpp_buff_0'
v32 = ( _cpp_buff_0 *)xmalloc( 0x1F60uLL); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1105:22: error: expected expression
v14 = ( _cpp_buff_0 *)&v23[v22]; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1105:9: error: use of undeclared identifier '_cpp_buff_0'
v14 = ( _cpp_buff_0 *)&v23[v22]; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/cpplex.c:1124:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v5] & 0x204) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/parse_number/src/obj/cpplex.o] Error 1
